# AR_Voxel_Project

./: .gitignore  CMakeLists.txt  README.adoc  Readme.md  aruco_samples_utility.hpp  capture_and_segment_images.py  image_segmentation.py  main.cpp
Data/box_dataset/generated_models/: 1.off  README.adoc
Data/demo_material/: cameracalibration.yml
Data/demo_material/generated_models/: 2.off  3.off  README.adoc
python/: capture_and_segment_images.py  image_segmentation.py
src/: Benchmark.h  Calibration.h  ColorReconstruction.cpp  ColorReconstruction.h  MarchingCubes.cpp  MarchingCubes.h  Model.cpp  Model.h  PoseEstimation.h  Postprocessing3d.cpp  Postprocessing3d.h  Segmentation.h  Utils.h  VoxelCarving.cpp  VoxelCarving.h  aruco_samples_utility.hpp  main.cpp
